Fix letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,6 @@ body {
     font-size: 26px;
     text-decoration: none;
     line-height: 1.17;
-    letter-spacing: 0.03em; 
 }
 
     /* Header logo */
